share pseudo-static members

BUG: 265460