formatters/astyle/tests/astyletest.cpp
@@ -105,4 +105,13 @@ void AstyleTest::testMultipleFormatters()
     delete formatter2;
 }
 
+void AstyleTest::testMacroFormatting()
+{
+    AStyleFormatter fmt;
+    fmt.setSpaceIndentation(2);
+    fmt.setPreprocessorIndent(true);
+    QString formatted = fmt.formatSource("#define asdf\\\nfoobar\n");
+    QCOMPARE(formatted, QString("#define asdf\\\n  foobar\n"));
+}
+
 #include "astyletest.moc"
